# ChangeLog for media-sound/audacity
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacity/ChangeLog,v 1.105 2008/09/29 05:49:43 flameeyes Exp $

*audacity-1.3.5-r1 (29 Sep 2008)

  29 Sep 2008; Diego Pettenò <flameeyes@gentoo.org>
  +audacity-1.3.5-r1.ebuild:
  Add a new revision using EAPI=2 and USE dependencies.

  30 Aug 2008; Brent Baude <ranger@gentoo.org> audacity-1.3.5.ebuild:
  stable ppc, bug 231497

  24 Aug 2008; Markus Rothe <corsair@gentoo.org> audacity-1.3.5.ebuild:
  Stable on ppc64; bug #231497

  07 Aug 2008; Alexis Ballier <aballier@gentoo.org>
  +files/audacity-1.3.5-novorbis.patch, audacity-1.3.5.ebuild:
  fix build without libvorbis and use=-vorbis, by tangram
  <tangram1@tlen.pl>, bug #233472

  05 Aug 2008; Alexis Ballier <aballier@gentoo.org> audacity-1.3.5.ebuild:
  Bump flac dep to force upgrade to a recent version, it would fail to build
  if it is too old. Thanks to craig <oanjao@yahoo.com> for reporting in bug
  #233010

  15 Jul 2008; Kenneth Prugh <ken69267@gentoo.org> audacity-1.3.5.ebuild:
  amd64 stable, bug #231497

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> audacity-1.3.5.ebuild:
  x86 stable wrt #231497

  11 Jul 2008; Ferris McCormick <fmccor@gentoo.org> audacity-1.3.5.ebuild:
  Sparc stable, Bug #231497, seems to work for me.

  11 May 2008; Alexis Ballier <aballier@gentoo.org>
  -audacity-1.3.4-r1.ebuild:
  remove old

*audacity-1.3.5 (11 May 2008)

  11 May 2008; Alexis Ballier <aballier@gentoo.org>
  +files/audacity-1.3.5-cflags_with_non_standard_macros.patch,
  +files/audacity-1.3.5-libtool22.patch, +audacity-1.3.5.ebuild:
  version bump

  16 Apr 2008; Peter Volkov <pva@gentoo.org> audacity-1.3.4-r3.ebuild:
  amd64 stable, bug #212806, thank Angelo Arrifano for tests.

  09 Apr 2008; Raúl Porcel <armin76@gentoo.org> audacity-1.3.4-r3.ebuild: