@@ -12,14 +12,14 @@ DIST audacity-src-1.3.4.tar.bz2 4349381 RMD160 754d81fb0e660d697e7c315c41f285849
 DIST audacity-src-1.3.5.tar.bz2 4542637 RMD160 f4d56d8ad88ad743c9ae04ee4abc3ded61674c5e SHA1 6ff24769fdef7bb0db7702eecb128f242fc85fce SHA256 58beaf20d5d4bdec61c93cc9bda08faea9b1c9b51c962b4176e9390a6a65904c
 DIST pa_stable_v19_20071207.tar.gz 1113282 RMD160 5185bd85bd4bc75dddb3fa56f172a346bdeea0c7 SHA1 3841453bb7be672a15b6b632ade6f225eb0a4efc SHA256 06a17727d56d382a69036de2ed9aee9a15cac0329b995b8cfcd69b357f47bf2b
 EBUILD audacity-1.3.4-r3.ebuild 2954 RMD160 7d16f63e00fc0bc7d9155cdb77bcf5077a8893df SHA1 17c20c4ce1b6dc01148f5e3817421d41b6753fd3 SHA256 e6882880a70b72def3c0c8cccca19e752b49977a9be30a810b0d9b2282ff126a
-EBUILD audacity-1.3.5-r1.ebuild 2519 RMD160 500131324943d00dab6af07665952f531936336c SHA1 48041aa4f468299ac46efd0656a2355e246f76ff SHA256 183ee698d8c7f5d167bd14d887c94778fc0ea2302d2a0f8a85a529f89b22b076
+EBUILD audacity-1.3.5-r1.ebuild 2505 RMD160 ac191f01c4b976130d75068fe0c3e5aba40c3592 SHA1 877eede92a28ad4cc9dbae4733074990d35de94d SHA256 f8cd44cf94e8fac202b0cb75fd1f0943e4fe7e90f16864daca432ccd07b05e19
 EBUILD audacity-1.3.5.ebuild 2767 RMD160 11a3545e8a77779a564edcc2026723ca025cada8 SHA1 7ca28fcc0feebb1b69a6b368ef5f0b12aa64d32b SHA256 7740e2bdcfb608ac751a5652bad838fe9c000786a7773e69e23c46dfde227ebc
-MISC ChangeLog 18308 RMD160 8e5d0d0e3c2e48bd654cfef048c5c94570349f74 SHA1 55a48800008ab789b73460d77fa7a870ee6089fe SHA256 5464c57d67d248028332d93355d9e9523e4db316a403912072547cc98ce3355c
+MISC ChangeLog 18430 RMD160 2c6461010d3eb6302ae6b092e29630328daba612 SHA1 b11a93e7b2e1dc12a2909a74fbe1639d33bf15e6 SHA256 d44f06658e6f7c77837d49c3de3a84870028f07b79a3cf689fe4ef51c30ed288
 MISC metadata.xml 490 RMD160 1ae27603d1eafdd0f9bdc4e2002be5418c99500d SHA1 673ea9e78fefc9673bfa92e2e4fa1a67e8e341d0 SHA256 17751732431c3dbe605f12634e5b5e24a7baa188016be3271114934f1b8eb6cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkjgbHkACgkQAiZjviIA2XhvVgCfZ9O3yAtX+XJmC2U8Fz7Pd+Vw
-pPMAoNSmdMYwfuxwziBebfIVZhvzy4jl
-=zua2
+iEYEARECAAYFAkjgkcoACgkQvFcC4BYPU0pciACcCsQeJYQJDSoyHb3av+spWy/7
+I5kAn2bgUgvEQrKmSVw3i6YWB3pAR/Je
+=jaKi
 -----END PGP SIGNATURE-----
